Sub-list of completed items, that can be re-added to todo list

--- a/todolist/todo.html
+++ b/todolist/todo.html
@@ -17,11 +17,9 @@
 
     <div class="container">
       <!-- Uncompleted tasks -->
-      <ul class="todo" id="todo" style="list-style: none" >
-      </ul>
+      <ul class="todo" id="todo" style="list-style: none" ></ul>
       <!--Completed tasks  -->
-      <ul class="todo" id="completed" style="list-style: none" >
-      </ul>
+      <ul class="todo" id="completed" style="list-style: none" ></ul>
     </div>
 
       <script src="js/main.js"></script>
