header border hover changed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <input type="text" placeholder="Do zrobienia:" id="item">
+      <input type="text" placeholder="ToDo:" id="item">
       <button id="add">Add</button>
     </header>
 
